[gd_scene load_steps=23 format=3 uid="uid://dc0a4tqi4w7aa"]

[ext_resource type="Texture2D" uid="uid://ba6tiy84d0bfe" path="res://Assets/Icons/save_file.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cjrx306qsku7o" path="res://Assets/Icons/open_file.png" id="2"]
[ext_resource type="Script" path="res://UI/Toolbar.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bym2tvxg1fnlu" path="res://Assets/Icons/new_file.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c2aa5lmbh3hvf" path="res://Assets/Icons/clear_canvas.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c7y2ssu25ct6n" path="res://Assets/Icons/redo.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dg7ue8p5w1gyv" path="res://Assets/Icons/undo.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ckhhe0mt0ysl5" path="res://Assets/Icons/brush_tool.png" id="8"]
[ext_resource type="Texture2D" uid="uid://b4cqn3uovj82n" path="res://Assets/Icons/eraser_tool.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cdnoik22cy3au" path="res://Assets/Icons/rectangle_tool.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bpk6ciax2f6no" path="res://Assets/Icons/line_tool.png" id="11"]
[ext_resource type="Texture2D" uid="uid://ceaublhd0a30y" path="res://Assets/Icons/canvas_color_tool.png" id="12"]
[ext_resource type="Script" path="res://UI/Components/FlatTextureButton.gd" id="13"]
[ext_resource type="FontFile" path="res://Assets/Fonts/font_small.tres" id="14"]
[ext_resource type="Theme" uid="uid://8s5u8epnbx6x" path="res://UI/Themes/theme_dark.tres" id="15"]
[ext_resource type="Texture2D" uid="uid://2053p2ycqso3" path="res://Assets/Icons/selection_tool.png" id="16"]
[ext_resource type="Texture2D" uid="uid://7gf1r2sn18at" path="res://Assets/Icons/grid.png" id="17"]
[ext_resource type="Texture2D" uid="uid://c1treoeqci2hl" path="res://Assets/Icons/fullscreen.png" id="18"]
[ext_resource type="Texture2D" uid="uid://bu4ny6qnoptgl" path="res://Assets/Icons/circle_tool.png" id="19"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxLine" id="3"]
color = Color(0.619608, 0.619608, 0.619608, 1)
grow_begin = -10.0
grow_end = -10.0
vertical = true

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Toolbar" type="ScrollContainer"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
theme = ExtResource("15")
script = ExtResource("3")

[node name="Console" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(715, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Left" type="HBoxContainer" parent="Console"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="VSeparator" type="VSeparator" parent="Console/Left"]
layout_mode = 2
theme_override_styles/separator = SubResource("2")

[node name="NewFileButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_NEW_FILE"
texture_normal = ExtResource("4")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="OpenFileButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_OPEN_FILE"
texture_normal = ExtResource("2")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="SaveFileButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_SAVE_FILE"
texture_normal = ExtResource("1")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="ClearCanvasButton" type="TextureButton" parent="Console/Left"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Clear Canvas"
texture_normal = ExtResource("5")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="VSeparator2" type="VSeparator" parent="Console/Left"]
layout_mode = 2
theme_override_styles/separator = SubResource("3")

[node name="UndoButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_UNDO"
texture_normal = ExtResource("7")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="RedoButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_REDO"
texture_normal = ExtResource("6")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="VSeparator3" type="VSeparator" parent="Console/Left"]
layout_mode = 2
theme_override_styles/separator = SubResource("3")

[node name="BrushToolButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_BRUSH_TOOL"
toggle_mode = true
texture_normal = ExtResource("8")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="RectangleToolButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_RECTANGLE_TOOL
"
toggle_mode = true
texture_normal = ExtResource("10")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="CircleToolButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_CIRCLE_TOOL"
toggle_mode = true
texture_normal = ExtResource("19")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="LineToolButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_LINE_TOOL"
toggle_mode = true
texture_normal = ExtResource("11")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="EraserToolButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_ERASER_TOOL"
toggle_mode = true
texture_normal = ExtResource("9")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="SelectionToolButton" type="TextureButton" parent="Console/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_SELECT_TOOL"
toggle_mode = true
texture_normal = ExtResource("16")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="VSeparator4" type="VSeparator" parent="Console/Left"]
layout_mode = 2
theme_override_styles/separator = SubResource("3")

[node name="ColorButton" type="Button" parent="Console/Left"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_BRUSH_COLOR"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14")
theme_override_styles/normal = SubResource("4")
theme_override_styles/hover = SubResource("4")
theme_override_styles/pressed = SubResource("4")
theme_override_styles/disabled = SubResource("4")
theme_override_styles/focus = SubResource("4")
action_mode = 0
text = "#ffffff"

[node name="BrushSizeSlider" type="HSlider" parent="Console/Left"]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_BRUSH_SIZE"
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="BrushSizeLabel" type="Label" parent="Console/Left"]
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
text = "12"

[node name="Right" type="HBoxContainer" parent="Console"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 2

[node name="BackgroundColorButton" type="TextureButton" parent="Console/Right"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_CANVAS_COLOR"
action_mode = 0
texture_normal = ExtResource("12")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="GridButton" type="TextureButton" parent="Console/Right"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_TOOLTIP_GRID"
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("17")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="FullscreenButton" type="TextureButton" parent="Console/Right"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TOOLBAR_FULLSCREEN_TOGGLE"
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("18")
script = ExtResource("13")
hover_tint = Color(0.662745, 0.945098, 0.87451, 1)
pressed_tint = Color(0.572549, 1, 0.894118, 1)

[node name="VSeparator" type="VSeparator" parent="Console/Right"]
layout_mode = 2
theme_override_styles/separator = SubResource("2")

[connection signal="pressed" from="Console/Left/NewFileButton" to="." method="_on_NewFileButton_pressed"]
[connection signal="pressed" from="Console/Left/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="Console/Left/SaveFileButton" to="." method="_on_SaveFileButton_pressed"]
[connection signal="pressed" from="Console/Left/ClearCanvasButton" to="." method="_on_ClearCanvasButton_pressed"]
[connection signal="pressed" from="Console/Left/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="Console/Left/RedoButton" to="." method="_on_RedoButton_pressed"]
[connection signal="pressed" from="Console/Left/BrushToolButton" to="." method="_on_BrushToolButton_pressed"]
[connection signal="pressed" from="Console/Left/RectangleToolButton" to="." method="_on_RectangleToolButton_pressed"]
[connection signal="pressed" from="Console/Left/CircleToolButton" to="." method="_on_CircleToolButton_pressed"]
[connection signal="pressed" from="Console/Left/LineToolButton" to="." method="_on_LineToolButton_pressed"]
[connection signal="pressed" from="Console/Left/EraserToolButton" to="." method="_on_EraserToolButton_pressed"]
[connection signal="pressed" from="Console/Left/SelectionToolButton" to="." method="_on_SelectToolButton_pressed"]
[connection signal="pressed" from="Console/Left/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="value_changed" from="Console/Left/BrushSizeSlider" to="." method="_on_BrushSizeSlider_value_changed"]
[connection signal="pressed" from="Console/Right/BackgroundColorButton" to="." method="_on_BackgroundColorButton_pressed"]
[connection signal="toggled" from="Console/Right/GridButton" to="." method="_on_GridButton_toggled"]
[connection signal="toggled" from="Console/Right/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
